# hashbuffers

./: .gitignore  CLAUDE.md  Makefile  SPEC_UPDATE_CHECKLIST.md  explained.md  inspector.md  pyproject.toml  wire-format.md
.claude/: CODEBASE_MAP.md
src/hashbuffers/: __main__.py  arrays.py  codec.py  fitting.py  inspector.py  schema.py  schema.pyi  schema_json.py  store.py  trezorproto.py  util.py
src/hashbuffers/codec/: __init__.py  base.py  data.py  io.py  links.py  slots.py  table.py
src/hashbuffers/data_model/: abc.py  adapter.py  array.py  common.py  primitive.py  struct.py
src/wire_format/: codec.py
tests/: test_block_base.py  test_data_block.py  test_fitting.py  test_links_block.py  test_primitives.py  test_schema.py  test_schema_coverage.py  test_schema_json.py  test_slots_block.py  test_store.py  test_struct_block.py  test_table_block.py  test_trezorproto.py  test_util.py  test_vectors_json.py
tests/arrays/: conftest.py  test_build.py  test_bytestring_array.py  test_bytestring_tree.py  test_data_array.py  test_helpers.py  test_linktree.py  test_linktree_reduce.py  test_table_array.py
tests/data_model/: conftest.py  test_adapter.py  test_bytestring_type.py  test_fixed_array_type.py  test_primitive.py  test_struct.py  test_var_array_types.py
tests/schema/: conftest.py  test_adapters.py  test_arrays.py  test_decode.py  test_field_types.py  test_fixed_arrays.py  test_lazy.py  test_struct.py
vectors_json/: generate_vectors.py  negative.json  positive.json
