[project]
name = "hashbuffers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "matejcik", email = "ja@matejcik.cz" }]
requires-python = ">=3.12"

[project.scripts]
hashbuffers = "hashbuffers.__main__:main"

[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "trezor>=0.13",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=hashbuffers --cov-branch --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["hashbuffers"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pyright]
pythonVersion = "3.12"
